fix: gap to dns items

--- a/src/components/Dashboard/Dashboard.module.scss
+++ b/src/components/Dashboard/Dashboard.module.scss
@@ -5,5 +5,5 @@
 	flex-wrap: wrap;
 	justify-content: space-evenly;
 	align-items: center;
-	row-gap: 40px;
+	gap: 40px;
 }
